--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "readability": "^0.1.0"
+    "react-native-animatable": "^1.3.0",
+    "react-native-typewriter": "^0.5.3",
+    "react-native-ui-kitten": "^3.0.1",
+    "readability-node": "^0.1.0"
   }
 }
